Hotel show and hotel update
