# app/Http/Controllers/Superadmincontroller.php
@@ -16,15 +16,15 @@ class Superadmincontroller extends Controller
     public function index(){
         $page = request('page', 1);
 
-        $hotels = Cache::tags('hotels')->remember("hotels.page.$page", 7200, function () {
-    return Hotel::select('id','name','city','phone')
+        $hotels = Cache::tags(['hotels'])->remember("hotels.page.$page", 7200, function () {
+        return Hotel::select('id','name','city','phone')
         ->paginate(20);
 });
 
         return response()->json([
-            'status' => true,
+            'success' => true,
             'data' => $hotels
-        ]);
+        ],200);
     }
     public function create_hotel(Createhotelrequest $request,$id=null){
         $dto=CreatehotelDTO::fromRequest($request);
@@ -33,7 +33,22 @@ class Superadmincontroller extends Controller
         }else{
             $hotel = $this->adminservice->create_hotel($dto);
         }
-        return response()->json($hotel);
+        return response()->json($hotel,$hotel['status']);
 
     }
+    public function show_hotel($id){
+    $data = $this->adminservice->get_hotel($id);
+
+    if (! $data['success']) {
+        return response()->json([
+            'message' => $data['message']
+        ], $data['status']);
+    }
+
+    return response()->json([
+        'success' => true,
+        'hotel' => $data['data'],
+        'message' => $data['message'],
+    ], $data['status']);
+}
 }
